# aerospike-client-rust

./: Cargo.toml
benches/: client_server.rs
src/: client.rs  errors.rs  lib.rs  record.rs  value.rs
src/batch/: batch_executor.rs  batch_read.rs
src/cluster/: mod.rs  node.rs  node_validator.rs  partition_tokenizer.rs
src/commands/: admin_command.rs  batch_read_command.rs  buffer.rs  delete_command.rs  execute_udf_command.rs  exists_command.rs  info_command.rs  mod.rs  operate_command.rs  query_command.rs  read_command.rs  scan_command.rs  single_command.rs  stream_command.rs  touch_command.rs  write_command.rs
src/msgpack/: decoder.rs
src/net/: connection.rs  connection_pool.rs  host.rs  mod.rs  parser.rs
src/policy/: batch_policy.rs  client_policy.rs  concurrency.rs  mod.rs
src/query/: mod.rs  recordset.rs  statement.rs
tests/: client.rs
tests/common/: mod.rs
tests/src/: batch.rs  cdt_list.rs  cdt_map.rs  index.rs  kv.rs  query.rs  scan.rs  truncate.rs  udf.rs
tools/benchmark/: Cargo.toml
tools/benchmark/src/: cli.rs  generator.rs  main.rs  stats.rs  workers.rs
