[package]
name = "aerospike"
version = "0.4.0"
edition = "2018"
authors = ["Khosrow Afroozeh <khosrow@aerospike.com>", "Jan Hecking <jhecking@aerospike.com>"]
description = "Aerospike Client for Rust"
keywords = ["aerospike", "nosql", "distributed", "database"]
categories = ["database"]
homepage = "https://www.aerospike.com/"
repository = "https://github.com/aerospike/aerospike-client-rust/"
documentation = "https://docs.rs/aerospike/"
license = "Apache-2.0"
readme = "README.md"

exclude = [
    ".travis.yml",
    ".travis/*",
    ".appveyor.yml",
]

[badges]
travis-ci = { repository = "aerospike/aerospike-client-rust" }
appveyor = { repository = "aerospike/aerospike-client-rust" }

[dependencies]
tracing = "0.1"
byteorder = "1.3"
ripemd160 = "0.8"
base64 = "0.11"
crossbeam-queue = "0.2"
rand = "0.7"
scoped-pool = "1.0"
lazy_static = "1.4"
error-chain = "0.12"
parking_lot = "0.9"
pwhash = "0.3"
futures = "0.3"
tokio = { version = "^0.2", features = ["macros", "tcp", "dns", "stream", "time", "io-util", "rt-core"] }
deadpool = "0.5"
async-trait = "0.1"

[dev-dependencies]
env_logger = "0.7"
hex = "0.4"
bencher = "0.1"

[[bench]]
name = "client_server"
harness = false

[workspace]
members = ["tools/benchmark"]
